--- a/index.html
+++ b/index.html
@@ -5,12 +5,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- fonts.css link -->
+    <link rel="stylesheet" href="./styles/fonts.css">
+    <!-- normalize.css link -->
+    <link rel="stylesheet" href="./styles/normalize.css">
+    <!-- style.css link -->
+    <link rel="stylesheet" href="./styles/style.css">
     <title>3rd month 4th lesson</title>
 </head>
 
 <body>
-    <h1>Hello world</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis, unde.</p>
+    <header>
+        <div class="container header--container">
+            <div class="logo">
+                <a href="#"><img src="./images/Group.svg" alt="farmino-log"></a>
+            </div>
+            <div class="nav">
+                <ul>
+                    <li>
+                        <a href="#">How it works</a>
+                    </li>
+                    <li>
+                        <a href="#">About us</a>
+                    </li>
+                    <li>
+                        <a href="#">Partners</a>
+                    </li>
+                    <li>
+                        <a href="#">How it works</a>
+                    </li>
+                    <li>
+                        <a href="#">Support</a>
+                    </li>
+                    <li>
+                        <a href="#">Buy now</a>
+                    </li>
+                </ul>
+
+            </div>
+        </div>
+    </header>
 </body>
 
 </html>
