--- a/index.html
+++ b/index.html
@@ -8,37 +8,38 @@
     <!-- fonts.css link -->
     <link rel="stylesheet" href="./styles/fonts.css">
     <!-- normalize.css link -->
-    <link rel="stylesheet" href="./styles/normalize.css">
+    <!-- <link rel="stylesheet" href="./styles/normalize.css"> -->
     <!-- style.css link -->
     <link rel="stylesheet" href="./styles/style.css">
     <title>3rd month 4th lesson</title>
 </head>
 
 <body>
-    <header>
+    <!-- header -->
+    <header class="header">
         <div class="container header--container">
             <div class="logo">
                 <a href="#"><img src="./images/Group.svg" alt="farmino-log"></a>
             </div>
-            <div class="nav">
-                <ul>
+            <div class="header--nav">
+                <ul class="header--nav-items">
                     <li>
-                        <a href="#">How it works</a>
+                        <a class="header--nav-item" href="#">How it works</a>
                     </li>
                     <li>
-                        <a href="#">About us</a>
+                        <a class="header--nav-item" href="#">About us</a>
                     </li>
                     <li>
-                        <a href="#">Partners</a>
+                        <a class="header--nav-item" href="#">Partners</a>
                     </li>
                     <li>
-                        <a href="#">How it works</a>
+                        <a class="header--nav-item" href="#">How it works</a>
                     </li>
                     <li>
-                        <a href="#">Support</a>
+                        <a class="header--nav-item" href="#">Support</a>
                     </li>
                     <li>
-                        <a href="#">Buy now</a>
+                        <a class="header--nav-item btn" href="#">Buy now</a>
                     </li>
                 </ul>
 
