--- a/index.html
+++ b/index.html
@@ -46,6 +46,19 @@
             </div>
         </div>
     </header>
+    <!-- hero -->
+    <div class="hero">
+        <div class="container hero--container">
+            <h1 class="hero--title">Organic farming reimagined with farmino</h1>
+            <p class="hero--desc">Luctus felis sit lectus tristique diam ornare bibendum. Arcu auctor suspendisse luctus amet bibendum pellentesque lorem. Malesuada lobortis tristique tortor,</p>
+            <div class="hero--btn">
+                <a href="#">Get Started</a>
+                <a href="#">Start free trial</a>
+            </div>
+            <img src="./images/Image.png" alt="picture">
+        </div>
+    </div>
+
 </body>
 
 </html>
