--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     <!-- hero -->
     <div class="hero">
         <div class="container hero--container">
-            <h1 class="hero--title">Organic farming reimagined with farmino</h1>
-            <p class="hero--desc">Luctus felis sit lectus tristique diam ornare bibendum. Arcu auctor suspendisse luctus amet bibendum pellentesque lorem. Malesuada lobortis tristique tortor,</p>
+            <h1 class="hero--title">Organic farming reimagined <br> with farmino</h1>
+            <p class="hero--desc">Luctus felis sit lectus tristique diam ornare bibendum. Arcu auctor suspendisse luctus amet <br> bibendum pellentesque lorem. Malesuada lobortis tristique tortor,</p>
             <div class="hero--btn">
                 <a href="#">Get Started</a>
                 <a href="#">Start free trial</a>
