--- a/index.html
+++ b/index.html
@@ -58,20 +58,26 @@
             <img src="./images/Image.png" alt="picture">
         </div>
     </div>
+    <!-- main -->
     <main class="main">
         <div class="container main--container">
             <div class="work">
                 <div class="working-info">
-                    <h2 class="work--title">Mission we are working on</h2>
-                    <p class="work-title">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut. Aliquip ex ea commodo consequat.Duis
-                        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,</p>
-                    <a href="#"><img src="./images/Frame81.png" alt="icon"><span>Organic making</span></a>
-                    <a href="#"><img src="./images/Frame82.png" alt="icon"><span>Certified products</span></a>
-                    <a href="#"><img src="./images/Frame83.png" alt="icon"><span>Fast delivery</span></a>
+                    <h2 class="work--title">Mission we <br> are working on</h2>
+                    <p class="work-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut. </p>
+                    <p class="work-desc desc">Aliquip ex ea commodo consequat.Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,</p>
+                    <div class="work-info-img">
+                        <a href="#"><img src="./images/Frame81.png" alt="icon"><span>Organic making</span></a>
+                        <a href="#"><img src="./images/Frame82.png" alt="icon"><span>Certified products</span></a>
+                        <a href="#"><img src="./images/Frame83.png" alt="icon"><span>Fast delivery</span></a>
+                    </div>
                 </div>
                 <div class="working-img">
                     <img src="./images/Group6.png" alt="picture"><img src="./images/Frame87.png" alt="picture"><img src="/images/image76.png" alt="picture">
                 </div>
+            </div>
+            <div class="choose">
+                <h2 class="choose--title">Choose from the best</h2>
             </div>
         </div>
     </main>
