--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
             </div>
             <div class="choose">
                 <h2 class="choose--title">Choose from the best</h2>
+                <div class="choose-cards"></div>
             </div>
         </div>
     </main>
