--- a/index.html
+++ b/index.html
@@ -78,7 +78,11 @@
             </div>
             <div class="choose">
                 <h2 class="choose--title">Choose from the best</h2>
-                <div class="choose-cards"></div>
+                <div class="choose-cards">
+                    <img src="./images/Frame51.png" alt="picture">
+                    <img src="./images/Group9.png" alt="picture">
+                    <img src="./images/Frame53.png" alt="picture">
+                </div>
             </div>
         </div>
     </main>
