--- a/index.html
+++ b/index.html
@@ -86,7 +86,36 @@
             </div>
         </div>
     </main>
+    <!-- testimonials -->
+    <div class="testimonials">
+        <div class="container">
+            <h2 class="title">Testimonials</h2>
+            <div class="testimonials--cards">
+                <div class="testimonials--card">
+                    <p class="desc">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit, sed do eiusmod tempor <br> incididunt ut labore et.</p>
+                    <img src="./images/image67.png" alt="woman">
+                    <h4 class="name">Kyla Harmon</h4>
+                </div>
+                <div class="testimonials--card">
+                    <p class="desc">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit, sed do eiusmod tempor <br> incididunt ut labore et.</p>
+                    <img src="./images/image68.png" alt="woman">
+                    <h4 class="name">Ryan Menzie</h4>
+                </div>
+                <div class="testimonials--card">
+                    <p class="desc">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit, sed do eiusmod tempor <br> incididunt ut labore et.</p>
+                    <img src="./images/image69.png" alt="woman">
+                    <h4 class="name">Aldrich Fowler</h4>
+                </div>
 
+            </div>
+            <div class="dots">
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
